feat: 以 MySQL 互动关系作为点赞收藏事实源 (#17)
* feat: 建立互动关系事实与事务命令

* feat: 复用 Outbox 构建互动读投影

* feat: 增加互动投影读取降级

* feat: 将历史互动维护切换至 MySQL 事实

* feat: 从 MySQL 完整重建互动投影

* fix: 保证互动命令并发事务正确性

* refactor: 由 MySQL 生成基准互动事实

* test: 更新互动故障与证据收集链路

* chore: 清理互动投影旧配置与术语

* docs: 更新互动事实与恢复边界

* fix: 保证 Outbox 延迟重试可恢复

* test: 补齐互动批处理边界

* fix: 固化非 Kafka 聚合事务边界

* test: 验证互动下游监听链路

* test: 收紧互动分块结果合并断言

* test: 验证互动重建与兼容收敛

* fix: 校验互动批量回源边界

* test: 验证互动旧事件终态收敛

* fix: 过滤互动终态过期副作用

* fix: 保证互动传输始终存在处理路径

* test: 验证互动监听器真实多播

* fix: 将损坏重试信封路由至来源死信

* fix: 补齐互动 Outbox 重试主题

* docs: 明确互动传输与恢复边界

* test: 稳定互动异步监听断言

* docs: 修正互动事实术语

* fix: 保证互动副作用按事实收敛

* fix: 加固互动投影重建与批量回源

* fix: 增加互动事件回执与可靠回放

* fix: 加固死信人工重放恢复状态

* docs: 更新互动事实与恢复操作边界

* fix: 让帖子上下文查询失败回滚互动命令

* test: 校正互动提交失败故障窗口